--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -63,7 +63,7 @@
 - 
   date: "Week 6: Sep 28"
   materials: "Rendering: Shading [Video](https://classtranscribe.illinois.edu/video?id=ff33b10f-c7f4-4df0-838f-183e77ee7b81&from=sharedlink)&nbsp; [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf)<br/>
-              Rendering: Deferred Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-DeferredShading.pdf)"
+              Rendering: Deferred Shading [Video](https://classtranscribe.illinois.edu/video?id=a79ac98d-6acd-4153-adad-d71e31f6837d&from=sharedlink)&nbsp; [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-DeferredShading.pdf)"
   title: "Rendering: Shading"
 -
   date: "Week 6: Sep 30"
