--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -67,7 +67,7 @@
   title: "Rendering: Shading"
 -
   date: "Week 6: Sep 30"
-  materials: " [Lecture Video](https://classtranscribe.illinois.edu/video?id=115c7350-c509-4dc5-aa8f-36bfafcfc2af&from=sharedlink<br/><br/>
+  materials: " [Lecture Video](https://classtranscribe.illinois.edu/video?id=115c7350-c509-4dc5-aa8f-36bfafcfc2af&from=sharedlink)<br/><br/>
                The Game Industry [PDF]() <br/>
        
                PrairieLearn HW 2 Available 9/30 **Due 10/14** [Link](https://www.prairielearn.org/pl/course_instance/129412/assessment/2322608)"
