--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -94,7 +94,7 @@
   title: "Game AI"
 - 
   date: "Week 8: Oct 14"
-  materials: "[Live Lecture Link]()<br/><br/>
+  materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
               Tactical AI [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-AI-5.pptx.pdf)<br/>
               PrairieLearn HW 3 Available **Due 10/28** [Link]()"
   title: "Game AI"
