--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -82,7 +82,7 @@
   title: "Game Design" 
 -  
   date: "Week 7: Oct 7"
-  materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/>
+  materials: "[Lecture Video](https://classtranscribe.illinois.edu/video?id=1de95c16-0a47-4982-9270-18ee0e3ee4ab&from=sharedlink)<br/>
                HW 2 Review [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/HW2.pdf)<br/>
                Rendering: UE5 Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteRasterization.pdf)"
   title: "Project Overview"
