--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -96,6 +96,7 @@
   date: "Week 8: Oct 14"
   materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
               Tactical AI [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-AI-5.pptx.pdf)<br/>
+              Semi-Inspirational Design Talk [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/DesignInspiration.pdf)<br/>
               PrairieLearn HW 3 **Due 10/28** [Link](https://www.prairielearn.org/pl/course_instance/129412/assessment/2323006)"
   title: "Game AI"
 -  
