--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -105,7 +105,7 @@
   title: "Virtual Reality"
 -
   date: "Week 9: Oct 21"
-  "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
+  materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
               VR in UE5 [PDF]()<br/>"
   title: "Virtual Reality"
 -
