--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -106,7 +106,8 @@
 -
   date: "Week 9: Oct 21"
   materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
-              VR in UE5 [PDF]()<br/>"
+              VR in UE5 [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-VR-UE5.pdf)<br/>
+              Maze Generation [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MazeGeneration.pdf)"
   title: "Virtual Reality"
 -
   date: "Week 10: Oct 26"
