--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -111,7 +111,7 @@
   title: "Virtual Reality"
 -
   date: "Week 10: Oct 26"
-  materials: Chaos Physics in UE [YouTube Video](https://youtu.be/mwbSi2R49ZY)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/498-UE4Physics.pdf)"
+  materials: "Chaos Physics in UE [YouTube Video](https://youtu.be/mwbSi2R49ZY)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/498-UE4Physics.pdf)"
   title: "Game Physics"
 -
   date: "Week 10: Oct 28"
