--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -115,7 +115,7 @@
   title: "Game Physics"
 -
   date: "Week 10: Oct 28"
-  "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
+  materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
               A Physics Engine [PDF]()<br/>
               Collision Detection[PDF]()"
   title: "Game Physics"
