--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -105,7 +105,7 @@
   title: "Virtual Reality"
 -
   date: "Week 9: Oct 21"
-  materials: "[Lecture Video]()<br/><br/>
+  materials: "[Lecture Video](https://classtranscribe.illinois.edu/video?id=94ac7325-4b58-4679-8306-deb4edeb5835&from=sharedlink)<br/><br/>
               VR in UE5 [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-VR-UE5.pdf)<br/>
               Maze Generation [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MazeGeneration.pdf)"
   title: "Virtual Reality"
