--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -122,7 +122,8 @@
   title: "Game Physics"
 -
   date: "Week 11: Nov 2"
-  title: "Game Physics"
+  materials: "Animating in Unreal 5.1 [YouTube](https://www.youtube.com/watch?v=FgJ1stTScxI)"
+  title: "Animation"
 -
   date: "Week 11: Nov 4"
   materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>"
