--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -126,7 +126,9 @@
   title: "Animation"
 -
   date: "Week 11: Nov 4"
-  materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>"
+  materials: "[Live Lecture Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
+              Animation Concepts [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf)<br/>
+              HW5 [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/HW5.pdf)"
   title: "Animation"
 - 
   date: "Week 12: Nov 9"
