--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -115,7 +115,7 @@
   title: "Game Physics"
 -
   date: "Week 10: Oct 28"
-  materials: "[Lecture Video](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/><br/>
+  materials: "[Lecture Video](https://classtranscribe.illinois.edu/video?id=e6a35c4a-4613-4bba-a39a-ea51e70a5e2a&from=sharedlink)<br/><br/>
               A Physics Engine [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PhysicsEngine.pdf)<br/>
               Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide.pdf)<br/>
               HW4 [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/HW4.pdf)"
