--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -144,6 +144,7 @@
   title: "Game Physics"
 -
   date: "Week 13: Nov 18"
+  materials: "[Zoom Link](https://atvi.zoom.us/j/95664620437?pwd=REQ3dmc3TnkvWkZLVzlsWWNENmRjdz09&from=addon)"
   title: "Guest Speaker: Treyarch Studios"
 -  
   date: "Week 14: Nov 23"
