--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -141,10 +141,10 @@
   title: "Real-Time Path Tracing"
 -
   date: "Week 13: Nov 16"
-  title: "Game Physics"
+  title: "No Lecture - Work on the Project"
 -
   date: "Week 13: Nov 18"
-  materials: "[Zoom Link](https://atvi.zoom.us/j/92041809104)"
+  materials: ""
   title: "Guest Speaker: Treyarch Studios"
 -  
   date: "Week 14: Nov 23"
@@ -154,7 +154,7 @@
   title: "**Fall Break**"
 -
   date: "Week 15: Nov 30"
-  title: "UE Material Modeling"
+  title: "No Lecture - Work on the Project"
 -
   date: "Week 15: Dec 2"
   title: "Guest Speaker: Diana Huang Software Engineer at [Rec Room](https://recroom.com/)"
