--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -8,3 +8,94 @@
   date: "Week 1: Jan 19"
   materials: "Game Genres [Video](https://classtranscribe.illinois.edu/video?id=c66d9b06-5db8-4561-8f11-30dc36b56f6a&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)"
   title: "Game Genres and Design"
+- 
+  date: "Week 2: Jan 24"
+  title: "Unreal Engine Basics"
+-
+  date: "Week 2: Jan 26"
+  title: "Unreal Engine Basics"
+-
+  date: "Week 3: Jan 31"
+  title: "Basic Geometric Modeling"
+-
+  date: "Week 3: Feb 2"
+  title: "Basic Geometric Modeling"
+-  
+  date: "Week 4: Feb 7"
+  title: "LOD Generation"
+-  
+  date: "Week 4: Feb 9"
+  title: "UE5 Nanite Virtual Geometry"
+-
+  date: "Week 5: Feb 14"
+  title: "Graphics: Rendering Basics"
+-
+  date: "Week 5: Feb 16"
+  title: "Graphics: Rasterization"
+- 
+  date: "Week 6: Feb 21"
+  title: "Graphics: Shading"
+-
+  date: "Week 6: Feb 23"
+  title: "Guest Speaker: Dan Cermak"
+- 
+  date: "Week 7: Feb 28"
+  title: "Project & Game Design" 
+-  
+  date: "Week 7: Mar 2"
+  title: "Art Generation"
+-  
+  date: "Week 8: Mar 7"
+  title: "Art Generation"
+- 
+  date: "Week 8: Mar 9"
+  title: "Game AI"
+- 
+  date: "Week 9: Mar 13"
+  title: "**Spring Break**"
+-  
+  date: "Week 9: Mar 15"
+  title: "**Spring Break**"
+-
+  date: "Week 10: Mar 21"
+  title: "Game AI"
+-
+  date: "Week 10: Mar 23"
+  title: "Game AI"
+-
+  date: "Week 11: Mar 28"
+  title: "Game Physics"
+-
+  date: "Week 11: Mar 30"
+  title: "Game Physics"
+-
+  date: "Week 12: Apr 4"
+  materials: ""
+  title: "Game Physics"
+- 
+  date: "Week 12: Apr 6"
+  title: "Animation"
+-  
+  date: "Week 13: Apr 11"
+  materials: ""
+  title: "Animation"
+-
+  date: "Week 13: Apr 13"
+  title: "Animation"
+-
+  date: "Week 14: Apr 18"
+  materials: ""
+  title: "UE5 Material Modeling"
+-
+  date: "Week 14: Apr 20"
+  title: "UE5 Material Modeling"
+-
+  date: "Week 15: Apr 25"
+  title: "GDC Recap"
+-
+  date: "Week 15: Apr 27"
+  title: "Guest Speaker"
+-
+  date: "Week 16: May 2"
+  title: "Guest Speaker"
+-
