--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -7,7 +7,7 @@
   date: "Week 1: Jan 19"
   materials: "**Zoom Only - No In-Person** <br/>
                [Live Video](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)"
-  title: "Game Engine and UE5"
+  title: "Game Engines and UE5"
 - 
   date: "Week 2: Jan 24"
   title: "Unreal Engine Basics"
