--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,12 +1,14 @@
 - 
   date: "Week 1: Jan  17"
-  materials: "Course Overview [Live Video](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09) <br/>
+  materials: "Course Overview [Video]() <br/>
               Game Genres [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)"
   title: "Course Introduction"
 - 
   date: "Week 1: Jan 19"
   materials: "**Zoom Only - No In-Person** <br/>
-               [Live Video](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)"
+               [Live Video](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+               UE4 and Game Engines [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE4.pdf)<br/>
+               UE5 [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)"
   title: "Game Engines and UE5"
 - 
   date: "Week 2: Jan 24"
