--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,6 +1,6 @@
 - 
   date: "Week 1: Jan  17"
-  materials: "Course Overview [Video]() <br/>
+  materials: "Course Overview<br/>
               Game Genres [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)"
   title: "Course Introduction"
 - 
