--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -12,7 +12,8 @@
   title: "Game Engines and UE5"
 - 
   date: "Week 2: Jan 24"
-  materials: "UE5 [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)"
+  materials: "UE5 [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf) <br/>
+              Art Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf)"
   title: "Unreal Engine Basics"
 -
   date: "Week 2: Jan 26"
