--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -12,7 +12,7 @@
   title: "Game Engines and UE5"
 - 
   date: "Week 2: Jan 24"
-  materials: "[Recorded Video]()<br/>
+  materials: "[Recorded Video](https://classtranscribe.illinois.edu/video?id=c9976141-04a9-41cc-9954-452a62d1b2ea&from=sharedlink)<br/>
               Art: Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
               Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf)"
   title: "Basic Geometric Modeling"
