--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -18,7 +18,7 @@
   title: "Basic Geometric Modeling"
 -
   date: "Week 2: Jan 26"
-  materials: " [Zoom Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/> 
+  materials: " [Recorded Video](https://classtranscribe.illinois.edu/video?id=b3b1366b-9203-4ece-8238-faa5a1c2cff7&from=sharedlink)<br/> 
                 Art: Bezier Curves [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier1.pdf)<br/>
                 UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)"
   title: "Basic Geometric Modeling"
