--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -24,7 +24,10 @@
   title: "Basic Geometric Modeling"
 -
   date: "Week 3: Jan 31"
-  materials: "**[MP 1](https://illinois-cs415.github.io/assignments/mp1.html) Due**" 
+  materials: "**[MP 1](https://illinois-cs415.github.io/assignments/mp1.html) Due** <br/>
+              [Live Zoom Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+              Art: Bezier Patches [PDF]()<br/>
+              Art: Mazes! [PDF]()" 
   title: "Basic Geometric Modeling"
 -
   date: "Week 3: Feb 2"
